trying to fix map z-index

--- a/Skeleton-2.0.4/style.css
+++ b/Skeleton-2.0.4/style.css
@@ -162,6 +162,8 @@ header {
 }
 
 .map {
+	position: fixed;
+	z-index: 1;
 	width: 50%;
 	margin-left: 25%;
 	
